<resources>
    <string name="app_name">TaskApplication</string>
    <string name="title_home">Home</string>
    <string name="title_today">Today</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_lists">Lists</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="tasks">
        <item>Grocery Shop</item>
        <item>Buy Birthday Present</item>
        <item>Walk Dog</item>
        <item>Do Homework</item>
    </string-array>
    <string-array name="categories">
        <item>Grocery List</item>
        <item>To-do List</item>
        <item>Guest List</item>
        <item>Packing List</item>
        <item>New List</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signed_out">Sign Out</string>
    <string name="google_title_text">Google</string>
    <string name="hint">hint</string>
    <string name="title_activity_create_list">createList</string>
    <string name="addTasks">Add Task</string>
    <string name="addTask">Add Task</string>
    <string name="addButton">Add</string>
    <string name="addItem">New Item</string>
    <string name="listName">List Name</string>
    <string name="addList">Add a List</string>
    <string name="saveList"> Save List</string>
    <string name="viewLists">View Lists</string>
    <string name="goBack">Go Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
